Added Chapter 1 Added labels in each chapter Update .gitignore to include 'ref/' directory

--- a/src/references.bib
+++ b/src/references.bib
@@ -1,3 +1,49 @@
+
+@misc{astroph_hist,
+	author = {},
+	title = {{T}he {H}istory of {A}strophotography | {H}igh {P}oint {S}cientific --- highpointscientific.com},
+	howpublished = {\url{https://www.highpointscientific.com/astronomy-hub/post/astro-photography-guides/history-of-astrophotography}},
+	year = {},
+}
+
+@misc{multiwavelength_image_proc,
+  doi = {10.48550/ARXIV.2410.06573},
+  url = {https://arxiv.org/abs/2410.06573},
+  author = {Bhowmik,  Tanmoy and Islam,  MD Fardin and Tasneem,  Kazi Nusrat and Roy,  Rantideb and Shahariar,  Rownok},
+  keywords = {Instrumentation and Methods for Astrophysics (astro-ph.IM),  FOS: Physical sciences,  FOS: Physical sciences},
+  title = {Image Processing and Analysis of Multiple Wavelength Astronomical Data Using Python Tools},
+  publisher = {arXiv},
+  year = {2024},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@article{calibration_1,
+  title={The sloan digital sky survey: Technical summary},
+  author={York, Donald G and Adelman, J and Anderson Jr, John E and Anderson, Scott F and Annis, James and Bahcall, Neta A and Bakken, JA and Barkhouser, Robert and Bastian, Steven and Berman, Eileen and others},
+  journal={The Astronomical Journal},
+  volume={120},
+  number={3},
+  pages={1579},
+  year={2000},
+  publisher={IOP Publishing}
+}
+
+
+@article{calibration_2,
+  title = {An Improved Photometric Calibration of the Sloan Digital Sky Survey Imaging Data},
+  volume = {674},
+  ISSN = {1538-4357},
+  url = {http://dx.doi.org/10.1086/524677},
+  DOI = {10.1086/524677},
+  number = {2},
+  journal = {The Astrophysical Journal},
+  publisher = {American Astronomical Society},
+  author = {Padmanabhan,  Nikhil and Schlegel,  David J. and Finkbeiner,  Douglas P. and Barentine,  J. C. and Blanton,  Michael R. and Brewington,  Howard J. and Gunn,  James E. and Harvanek,  Michael and Hogg,  David W. and Ivezić,  Željko and Johnston,  David and Kent,  Stephen M. and Kleinman,  S. J. and Knapp,  Gillian R. and Krzesinski,  Jurek and Long,  Dan and Neilsen,  Jr.,  Eric H. and Nitta,  Atsuko and Loomis,  Craig and Lupton,  Robert H. and Roweis,  Sam and Snedden,  Stephanie A. and Strauss,  Michael A. and Tucker,  Douglas L.},
+  year = {2008},
+  month = feb,
+  pages = {1217–1233}
+}
+
 @inproceedings{orb,
   title = {ORB: An efficient alternative to SIFT or SURF},
   url = {http://dx.doi.org/10.1109/ICCV.2011.6126544},
@@ -10,19 +56,55 @@
   pages = {2564–2571}
 }
 
-@inproceedings{image_enhancement,
-author = {Chenyao Qu and Yanhao Tangge and Guang Yang},
-title = {{Digital signal processing techniques for image enhancement and restoration}},
-volume = {12799},
-booktitle = {Third International Conference on Advanced Algorithms and Signal Image Processing (AASIP 2023)},
-editor = {Kannimuthu Subramaniam and Pavel Loskot},
-organization = {International Society for Optics and Photonics},
-publisher = {SPIE},
-pages = {127992R},
-keywords = {Digital signal processing, Image enhancement, Image restoration},
-year = {2023},
-doi = {10.1117/12.3005862},
-URL = {https://doi.org/10.1117/12.3005862}
+@article{jwst,
+  title = {The James Webb Space Telescope},
+  volume = {123},
+  ISSN = {1572-9672},
+  url = {http://dx.doi.org/10.1007/s11214-006-8315-7},
+  DOI = {10.1007/s11214-006-8315-7},
+  number = {4},
+  journal = {Space Science Reviews},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Gardner,  Jonathan P. and Mather,  John C. and Clampin,  Mark and Doyon,  Rene and Greenhouse,  Matthew A. and Hammel,  Heidi B. and Hutchings,  John B. and Jakobsen,  Peter and Lilly,  Simon J. and Long,  Knox S. and Lunine,  Jonathan I. and Mccaughrean,  Mark J. and Mountain,  Matt and Nella,  John and Rieke,  George H. and Rieke,  Marcia J. and Rix,  Hans-Walter and Smith,  Eric P. and Sonneborn,  George and Stiavelli,  Massimo and Stockman,  H. S. and Windhorst,  Rogier A. and Wright,  Gillian S.},
+  year = {2006},
+  month = apr,
+  pages = {485–606}
+}
+
+@article{hubble,
+  title = {Experience with the Hubble Space Telescope: 20 years of an archetype},
+  volume = {51},
+  ISSN = {0091-3286},
+  url = {http://dx.doi.org/10.1117/1.OE.51.1.011011},
+  DOI = {10.1117/1.oe.51.1.011011},
+  number = {1},
+  journal = {Optical Engineering},
+  publisher = {SPIE-Intl Soc Optical Eng},
+  author = {Lallo,  Matthew D.},
+  year = {2012},
+  month = feb,
+  pages = {011011}
+}
+
+@article{elt,
+Author = {Paolo Padovani and Michele Cirasuolo},
+Title = {The Extremely Large Telescope},
+Year = {2023},
+Eprint = {arXiv:2312.04299},
+Howpublished = {Contemporary Physics, Vol. 64, Issue 1, pg. 47 - 64 (2023)},
+Doi = {10.1080/00107514.2023.2266921},
+}
+
+
+@misc{image_processing,
+  doi = {10.48550/ARXIV.1812.09702},
+  url = {https://arxiv.org/abs/1812.09702},
+  author = {Misra,  Diganta and Mishra,  Sparsha and Appasani,  Bhargav},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),  Information Retrieval (cs.IR),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Advanced Image Processing for Astronomical Images},
+  publisher = {arXiv},
+  year = {2018},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
 }
 
 @article{DnCnn,
@@ -40,15 +122,45 @@ URL = {https://doi.org/10.1117/12.3005862}
   pages = {3142–3155}
 }
 
-@misc{image_processing,
-  doi = {10.48550/ARXIV.1812.09702},
-  url = {https://arxiv.org/abs/1812.09702},
-  author = {Misra,  Diganta and Mishra,  Sparsha and Appasani,  Bhargav},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV),  Information Retrieval (cs.IR),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
-  title = {Advanced Image Processing for Astronomical Images},
-  publisher = {arXiv},
-  year = {2018},
-  copyright = {arXiv.org perpetual,  non-exclusive license}
+%? ------------------------ unused ------------------------
+
+@article{astroph_hist_3,
+    author = {Klaus Brasch},
+    title = {A Short History of Astrophotography (Part 1)},
+    journal = {Journal of the Royal Astronomical Society of Canada},
+    volume = {111},
+    number = {2},
+    pages = {52},
+    year = {2017},
+    month = {April},
+    bibcode = {2017JRASC.111...52B}
+}
+
+@article{astroph_hist_4,
+    author = {Klaus Brasch},
+    title = {A Short History of Astrophotography (Part 1)},
+    journal = {Journal of the Royal Astronomical Society of Canada},
+    volume = {111},
+    number = {2},
+    pages = {52},
+    year = {2017},
+    month = {April},
+    bibcode = {2017JRASC.111...52B}
+}
+
+@inproceedings{image_enhancement,
+author = {Chenyao Qu and Yanhao Tangge and Guang Yang},
+title = {{Digital signal processing techniques for image enhancement and restoration}},
+volume = {12799},
+booktitle = {Third International Conference on Advanced Algorithms and Signal Image Processing (AASIP 2023)},
+editor = {Kannimuthu Subramaniam and Pavel Loskot},
+organization = {International Society for Optics and Photonics},
+publisher = {SPIE},
+pages = {127992R},
+keywords = {Digital signal processing, Image enhancement, Image restoration},
+year = {2023},
+doi = {10.1117/12.3005862},
+URL = {https://doi.org/10.1117/12.3005862}
 }
 
 @inbook{astrophotography,
@@ -88,10 +200,17 @@ URL = {https://doi.org/10.1117/12.3005862}
   month = jul 
 }
 
-@misc{highpointscientificHistoryAstrophotography,
-	author = {},
-	title = {{T}he {H}istory of {A}strophotography | {H}igh {P}oint {S}cientific --- highpointscientific.com},
-	howpublished = {\url{https://www.highpointscientific.com/astronomy-hub/post/astro-photography-guides/history-of-astrophotography}},
-	year = {},
-	note = {[Accessed 13-11-2024]},
+@article{astrophotography_issue,
+  title = {Astrophotography issue},
+  volume = {22},
+  ISSN = {2058-7058},
+  url = {http://dx.doi.org/10.1088/2058-7058/22/10/30},
+  DOI = {10.1088/2058-7058/22/10/30},
+  number = {10},
+  journal = {Physics World},
+  publisher = {IOP Publishing},
+  author = {Fedida,  Simon},
+  year = {2009},
+  month = oct,
+  pages = {16–17}
 }
