--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -44,7 +44,7 @@
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
 \usepackage{csquotes}
 \usepackage{enumitem}
-\usepackage[noabbrev,capitalize,nameinlink,english]{cleveref}
+\usepackage[noabbrev,capitalize,nameinlink,italian]{cleveref}
 \creflabelformat{equation}{#2\textup{#1}#3}
 \usepackage{mathrsfs}
 \newcommand\sbullet[1][.75]{\mathbin{\vcenter{\hbox{\scalebox{#1}{$\bullet$}}}}}
