Refactor chapters and update references for improved clarity and consistency

--- a/src/references.bib
+++ b/src/references.bib
@@ -28,7 +28,6 @@
   publisher={IOP Publishing}
 }
 
-
 @article{calibration_2,
   title = {An Improved Photometric Calibration of the Sloan Digital Sky Survey Imaging Data},
   volume = {674},
@@ -120,6 +119,42 @@ Doi = {10.1080/00107514.2023.2266921},
   year = {2017},
   month = jul,
   pages = {3142–3155}
+}
+
+@misc{legault_astrophoto,
+	author = {},
+	title = {{M}oon - {T}hierry {L}egault --- astrophoto.fr},
+	howpublished = {\url{http://www.astrophoto.fr/moon.html}},
+	year = {},
+}
+
+@article{moon_orbit,
+    title={The Eart’S Rotation Axis And The Moon‘S Orbit},
+    volume={12},
+    url={https://journals.scholarpublishing.org/index.php/AIVP/article/view/16660},
+    DOI={10.14738/aivp.122.16660},
+    abstractNote={&amp;lt;p&amp;gt;In the XX century the diminution of the obliquity of the ecliptic came to be recognised as a certitude. This paper presents only a possible supposition regarding the connection of this astronomical phenomenon with the forces acting on the Moon, and on the Earth’s rotation axis.&amp;lt;/p&amp;gt;},
+    number={2},
+    journal={European Journal of Applied Sciences},
+    author={Ciobanu, Monica Zoe},
+    year={2024},
+    month={Mar.},
+    pages={31–35}
+}
+
+@misc{nasa_moon_orbit,
+	author = {},
+	title = {{T}he {M}oon's {O}rbit and {R}otation – {M}oon: {N}{A}{S}{A} {S}cience --- moon.nasa.gov},
+	howpublished = {\url{https://moon.nasa.gov/resources/429/the-moons-orbit-and-rotation/}},
+	year = {},
+}
+
+@book{sheehan_epic_moon,
+  author    = {William P. Sheehan and Thomas A. Dobbins},
+  title     = {Epic Moon},
+  year      = {2001},
+  publisher = {Willmann-Bell, Inc.},
+  isbn      = {9780943396725}
 }
 
 %? ------------------------ unused ------------------------
