Added a paragraph about the Moon, and started writing Chapter 2.

--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -10,7 +10,7 @@
 % ============================================== %
 
 % Document Class
-\documentclass[binding=0.6cm, noexaminfo, oneside]{sapthesis}
+\documentclass[noexaminfo, oneside]{sapthesis} % binding=0.6cm, 
 
 % Packages
 \usepackage{microtype}
@@ -170,9 +170,8 @@
 
 % ================== DEDICATION ==================
 
-% TODO: ------------------------------------------
 \dedication{
-  \say{tutta colpa della Luna, quando si avvicina troppo alla Terra fa impazzire tutti}\\― William Shakespeare
+  \say{Tutta colpa della Luna, quando si avvicina troppo alla Terra fa impazzire tutti}\\― William Shakespeare
 }
 
 % ================== ABSTRACT ==================
