--- a/src/references.bib
+++ b/src/references.bib
@@ -157,6 +157,45 @@ Doi = {10.1080/00107514.2023.2266921},
   isbn      = {9780943396725}
 }
 
+@article{img_features,
+  title={Distinctive image features from scale-invariant keypoints},
+  author={Lowe, David G},
+  journal={International journal of computer vision},
+  volume={60},
+  pages={91--110},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{surf,
+title = {Speeded-Up Robust Features (SURF)},
+journal = {Computer Vision and Image Understanding},
+volume = {110},
+number = {3},
+pages = {346-359},
+year = {2008},
+note = {Similarity Matching in Computer Vision and Multimedia},
+issn = {1077-3142},
+doi = {https://doi.org/10.1016/j.cviu.2007.09.014},
+url = {https://www.sciencedirect.com/science/article/pii/S1077314207001555},
+author = {Herbert Bay and Andreas Ess and Tinne Tuytelaars and Luc {Van Gool}},
+keywords = {Interest points, Local features, Feature description, Camera calibration, Object recognition},
+abstract = {This article presents a novel scale- and rotation-invariant detector and descriptor, coined SURF (Speeded-Up Robust Features). SURF approximates or even outperforms previously proposed schemes with respect to repeatability, distinctiveness, and robustness, yet can be computed and compared much faster. This is achieved by relying on integral images for image convolutions; by building on the strengths of the leading existing detectors and descriptors (specifically, using a Hessian matrix-based measure for the detector, and a distribution-based descriptor); and by simplifying these methods to the essential. This leads to a combination of novel detection, description, and matching steps. The paper encompasses a detailed description of the detector and descriptor and then explores the effects of the most important parameters. We conclude the article with SURF’s application to two challenging, yet converse goals: camera calibration as a special case of image registration, and object recognition. Our experiments underline SURF’s usefulness in a broad range of topics in computer vision.}
+}
+
+@inbook{clache,
+author = {Zuiderveld, Karel},
+title = {Contrast limited adaptive histogram equalization},
+year = {1994},
+isbn = {0123361559},
+publisher = {Academic Press Professional, Inc.},
+address = {USA},
+booktitle = {Graphics Gems IV},
+pages = {474–485},
+numpages = {12},
+doi = {10.5555/180895.180940}
+}
+
 %? ------------------------ unused ------------------------
 
 @article{astroph_hist_3,
