Added section about calibration in chapter 2. Fixed figure issues in chapter 1.

--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -38,7 +38,7 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{amsmath}
-\usepackage[Algorithm]{algorithm}      
+\usepackage[Algoritmo]{algorithm}      
 \usepackage{algpseudocode}
 \counterwithin{algorithm}{chapter}
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
