--- a/src/references.bib
+++ b/src/references.bib
@@ -17,18 +17,14 @@
   copyright = {arXiv.org perpetual,  non-exclusive license}
 }
 
-@article{calibration_1,
-  title={The sloan digital sky survey: Technical summary},
-  author={York, Donald G and Adelman, J and Anderson Jr, John E and Anderson, Scott F and Annis, James and Bahcall, Neta A and Bakken, JA and Barkhouser, Robert and Bastian, Steven and Berman, Eileen and others},
-  journal={The Astronomical Journal},
-  volume={120},
-  number={3},
-  pages={1579},
-  year={2000},
-  publisher={IOP Publishing}
+
+@article{calibration,
+  title={Improving Photometry and Astrophotography by Eliminating Dark Frames and Flat Fields},
+  author={Ireland, Tom C},
+  year={2019}
 }
 
-@article{calibration_2,
+@article{improved_solan,
   title = {An Improved Photometric Calibration of the Sloan Digital Sky Survey Imaging Data},
   volume = {674},
   ISSN = {1538-4357},
@@ -86,12 +82,12 @@
 }
 
 @article{elt,
-Author = {Paolo Padovani and Michele Cirasuolo},
-Title = {The Extremely Large Telescope},
-Year = {2023},
-Eprint = {arXiv:2312.04299},
-Howpublished = {Contemporary Physics, Vol. 64, Issue 1, pg. 47 - 64 (2023)},
-Doi = {10.1080/00107514.2023.2266921},
+  Author = {Paolo Padovani and Michele Cirasuolo},
+  Title = {The Extremely Large Telescope},
+  Year = {2023},
+  Eprint = {arXiv:2312.04299},
+  Howpublished = {Contemporary Physics, Vol. 64, Issue 1, pg. 47 - 64 (2023)},
+  Doi = {10.1080/00107514.2023.2266921},
 }
 
 
@@ -196,7 +192,38 @@ numpages = {12},
 doi = {10.5555/180895.180940}
 }
 
+@misc{webb_telescope,
+  title = {NASA's James Webb Space Telescope},
+  author = {{NASA}},
+  howpublished = {\url{https://webbtelescope.org/}},
+  year = {2024}
+}
+
+@misc{moon_rota,
+  title = {Naked Eye Astronomy by Nick Strobel},
+  author = {Nick Strobel},
+  howpublished = {\url{https://people.umass.edu/wqd/strobel/nakedeye/nakedeyc.htm}},
+  year = {2024}
+}
+@misc{calibration_img,
+  author       = {Sebastian Täubert},
+  title        = {Bias, Flats, Darks, Darkflats},
+  year         = {2024},
+  url          = {https://astrobasics.de/en/basics/bias-flats-darks-darkflats/},
+}
+
 %? ------------------------ unused ------------------------
+
+@article{sloan,
+  title={The sloan digital sky survey: Technical summary},
+  author={York, Donald G and Adelman, J and Anderson Jr, John E and Anderson, Scott F and Annis, James and Bahcall, Neta A and Bakken, JA and Barkhouser, Robert and Bastian, Steven and Berman, Eileen and others},
+  journal={The Astronomical Journal},
+  volume={120},
+  number={3},
+  pages={1579},
+  year={2000},
+  publisher={IOP Publishing}
+}
 
 @article{astroph_hist_3,
     author = {Klaus Brasch},
