Added section about image alignment

--- a/src/references.bib
+++ b/src/references.bib
@@ -163,6 +163,36 @@
   publisher={Springer}
 }
 
+@article{sift,
+  title = {Distinctive Image Features from Scale-Invariant Keypoints},
+  volume = {60},
+  ISSN = {0920-5691},
+  url = {http://dx.doi.org/10.1023/B:VISI.0000029664.99615.94},
+  DOI = {10.1023/b:visi.0000029664.99615.94},
+  number = {2},
+  journal = {International Journal of Computer Vision},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Lowe,  David G.},
+  year = {2004},
+  month = nov,
+  pages = {91–110}
+}
+
+@article{sift_img_ref,
+  title = {Modified Bag of Visual Words Model for Image Classification},
+  volume = {24},
+  ISSN = {2663-5461},
+  url = {http://dx.doi.org/10.22401/ANJS.24.2.11},
+  DOI = {10.22401/anjs.24.2.11},
+  number = {2},
+  journal = {Al-Nahrain Journal of Science},
+  publisher = {Al-Nahrain Journal of Science},
+  author = {N. Sultani,  Zainab and N. Dhannoon,  Ban},
+  year = {2021},
+  month = jun,
+  pages = {78–86}
+}
+
 @article{surf,
 title = {Speeded-Up Robust Features (SURF)},
 journal = {Computer Vision and Image Understanding},
