--- a/src/references.bib
+++ b/src/references.bib
@@ -242,6 +242,43 @@ doi = {10.5555/180895.180940}
   url          = {https://astrobasics.de/en/basics/bias-flats-darks-darkflats/},
 }
 
+@InProceedings{raguram_ransac_parameters,
+author="Raguram, Rahul
+and Frahm, Jan-Michael
+and Pollefeys, Marc",
+editor="Forsyth, David
+and Torr, Philip
+and Zisserman, Andrew",
+title="A Comparative Analysis of RANSAC Techniques Leading to Adaptive Real-Time Random Sample Consensus",
+booktitle="Computer Vision -- ECCV 2008",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="500--513",
+abstract="The Random Sample Consensus (RANSAC) algorithm is a popular tool for robust estimation problems in computer vision, primarily due to its ability to tolerate a tremendous fraction of outliers. There have been a number of recent efforts that aim to increase the efficiency of the standard RANSAC algorithm. Relatively fewer efforts, however, have been directed towards formulating RANSAC in a manner that is suitable for real-time implementation. The contributions of this work are two-fold: First, we provide a comparative analysis of the state-of-the-art RANSAC algorithms and categorize the various approaches. Second, we develop a powerful new framework for real-time robust estimation. The technique we develop is capable of efficiently adapting to the constraints presented by a fixed time budget, while at the same time providing accurate estimation over a wide range of inlier ratios. The method shows significant improvements in accuracy and speed over existing techniques.",
+isbn="978-3-540-88688-4"
+}
+
+@article{ransac,
+author = {Fischler, Martin A. and Bolles, Robert C.},
+title = {Random sample consensus: a paradigm for model fitting with applications to image analysis and automated cartography},
+year = {1981},
+issue_date = {June 1981},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {24},
+number = {6},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/358669.358692},
+doi = {10.1145/358669.358692},
+abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental data is introduced. RANSAC is capable of interpreting/smoothing data containing a significant percentage of gross errors, and is thus ideally suited for applications in automated image analysis where interpretation is based on the data provided by error-prone feature detectors. A major portion of this paper describes the application of RANSAC to the Location Determination Problem (LDP): Given an image depicting a set of landmarks with known locations, determine that point in space from which the image was obtained. In response to a RANSAC requirement, new results are derived on the minimum number of landmarks needed to obtain a solution, and algorithms are presented for computing these minimum-landmark solutions in closed form. These results provide the basis for an automatic system that can solve the LDP under difficult viewing},
+journal = {Commun. ACM},
+month = jun,
+pages = {381–395},
+numpages = {15},
+keywords = {scene analysis, model fitting, location determination, image matching, camera calibration, automated cartography}
+}
+
 %? ------------------------ unused ------------------------
 
 @article{sloan,
