added section about DnCNN, unsharp masking and stacking

--- a/src/references.bib
+++ b/src/references.bib
@@ -242,7 +242,7 @@ doi = {10.5555/180895.180940}
   url          = {https://astrobasics.de/en/basics/bias-flats-darks-darkflats/},
 }
 
-@InProceedings{raguram_ransac_parameters,
+@InProceedings{dncnn_img,
 author="Raguram, Rahul
 and Frahm, Jan-Michael
 and Pollefeys, Marc",
@@ -279,7 +279,50 @@ numpages = {15},
 keywords = {scene analysis, model fitting, location determination, image matching, camera calibration, automated cartography}
 }
 
+@article{Wang2023,
+  title = {Noise Attenuation for CSEM Data via Deep Residual Denoising Convolutional Neural Network and Shift-Invariant Sparse Coding},
+  volume = {15},
+  ISSN = {2072-4292},
+  url = {http://dx.doi.org/10.3390/rs15184456},
+  DOI = {10.3390/rs15184456},
+  number = {18},
+  journal = {Remote Sensing},
+  publisher = {MDPI AG},
+  author = {Wang,  Xin and Bai,  Ximin and Li,  Guang and Sun,  Liwei and Ye,  Hailong and Tong,  Tao},
+  year = {2023},
+  month = sep,
+  pages = {4456}
+}
+
 %? ------------------------ unused ------------------------
+
+@article{stacking,
+  title={A simultaneous stacking and deblending algorithm for astronomical images},
+  author={Kurczynski, Peter and Gawiser, Eric},
+  journal={The Astronomical Journal},
+  volume={139},
+  number={4},
+  pages={1592},
+  year={2010},
+  publisher={IOP Publishing}
+}
+
+@article{stacking_algos,
+  title={Image Stacking Methods},
+  author={Clark, Roger N.},
+  url={https://clarkvision.com/articles/image-stacking-methods/},
+}
+
+@article{MC_stacking,
+  title={MegaPipe: The MegaCam image stacking pipeline at the Canadian astronomical data centre},
+  author={Gwyn, Stephen DJ},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={120},
+  number={864},
+  pages={212},
+  year={2008},
+  publisher={IOP Publishing}
+}
 
 @article{sloan,
   title={The sloan digital sky survey: Technical summary},
@@ -342,6 +385,24 @@ URL = {https://doi.org/10.1117/12.3005862}
   author = {Dire,  James},
   year = {2024},
   pages = {23–47}
+}
+
+@INPROCEEDINGS{unsharp_mask,
+  author={Mitra, S.K. and Li, H. and Lin, I.-S. and Yu, T.-H.},
+  booktitle={[Proceedings] ICASSP 91: 1991 International Conference on Acoustics, Speech, and Signal Processing}, 
+  title={A new class of nonlinear filters for image enhancement}, 
+  year={1991},
+  volume={},
+  number={},
+  pages={2525-2528 vol.4},
+  keywords={Nonlinear filters;Image enhancement;Band pass filters;Filtering;Signal processing;Image processing;Laboratories;Histograms;Brightness;Pixel},
+  doi={10.1109/ICASSP.1991.150915}}
+
+@book{unsharp_mask_book,
+  title={Fundamentals of Digital Image Processing: A Practical Approach with Examples in Matlab},
+  author={Solomon, Chris and Breckon, Toby},
+  year={2011},
+  publisher={John Wiley \& Sons}
 }
 
 @article{image_enhancement_technique,
