--- a/src/references.bib
+++ b/src/references.bib
@@ -242,7 +242,7 @@ doi = {10.5555/180895.180940}
   url          = {https://astrobasics.de/en/basics/bias-flats-darks-darkflats/},
 }
 
-@InProceedings{dncnn_img,
+@InProceedings{ransac_analysis,
 author="Raguram, Rahul
 and Frahm, Jan-Michael
 and Pollefeys, Marc",
@@ -279,7 +279,7 @@ numpages = {15},
 keywords = {scene analysis, model fitting, location determination, image matching, camera calibration, automated cartography}
 }
 
-@article{Wang2023,
+@article{dncnn_img,
   title = {Noise Attenuation for CSEM Data via Deep Residual Denoising Convolutional Neural Network and Shift-Invariant Sparse Coding},
   volume = {15},
   ISSN = {2072-4292},
@@ -294,7 +294,11 @@ keywords = {scene analysis, model fitting, location determination, image matchin
   pages = {4456}
 }
 
-%? ------------------------ unused ------------------------
+@article{stacking_algos,
+  title={Image Stacking Methods},
+  author={Clark, Roger N.},
+  url={https://clarkvision.com/articles/image-stacking-methods/},
+}
 
 @article{stacking,
   title={A simultaneous stacking and deblending algorithm for astronomical images},
@@ -307,11 +311,25 @@ keywords = {scene analysis, model fitting, location determination, image matchin
   publisher={IOP Publishing}
 }
 
-@article{stacking_algos,
-  title={Image Stacking Methods},
-  author={Clark, Roger N.},
-  url={https://clarkvision.com/articles/image-stacking-methods/},
+@INPROCEEDINGS{unsharp_mask,
+  author={Mitra, S.K. and Li, H. and Lin, I.-S. and Yu, T.-H.},
+  booktitle={[Proceedings] ICASSP 91: 1991 International Conference on Acoustics, Speech, and Signal Processing}, 
+  title={A new class of nonlinear filters for image enhancement}, 
+  year={1991},
+  volume={},
+  number={},
+  pages={2525-2528 vol.4},
+  keywords={Nonlinear filters;Image enhancement;Band pass filters;Filtering;Signal processing;Image processing;Laboratories;Histograms;Brightness;Pixel},
+  doi={10.1109/ICASSP.1991.150915}}
+
+@book{unsharp_mask_book,
+  title={Fundamentals of Digital Image Processing: A Practical Approach with Examples in Matlab},
+  author={Solomon, Chris and Breckon, Toby},
+  year={2011},
+  publisher={John Wiley \& Sons}
 }
+
+%? ------------------------ unused ------------------------
 
 @article{MC_stacking,
   title={MegaPipe: The MegaCam image stacking pipeline at the Canadian astronomical data centre},
@@ -385,24 +403,6 @@ URL = {https://doi.org/10.1117/12.3005862}
   author = {Dire,  James},
   year = {2024},
   pages = {23–47}
-}
-
-@INPROCEEDINGS{unsharp_mask,
-  author={Mitra, S.K. and Li, H. and Lin, I.-S. and Yu, T.-H.},
-  booktitle={[Proceedings] ICASSP 91: 1991 International Conference on Acoustics, Speech, and Signal Processing}, 
-  title={A new class of nonlinear filters for image enhancement}, 
-  year={1991},
-  volume={},
-  number={},
-  pages={2525-2528 vol.4},
-  keywords={Nonlinear filters;Image enhancement;Band pass filters;Filtering;Signal processing;Image processing;Laboratories;Histograms;Brightness;Pixel},
-  doi={10.1109/ICASSP.1991.150915}}
-
-@book{unsharp_mask_book,
-  title={Fundamentals of Digital Image Processing: A Practical Approach with Examples in Matlab},
-  author={Solomon, Chris and Breckon, Toby},
-  year={2011},
-  publisher={John Wiley \& Sons}
 }
 
 @article{image_enhancement_technique,
