Continued writing chapter 3

--- a/src/references.bib
+++ b/src/references.bib
@@ -329,6 +329,18 @@ keywords = {scene analysis, model fitting, location determination, image matchin
   publisher={John Wiley \& Sons}
 }
 
+@article{shades_of_gray,
+  author = {Graham D. Finlayson and Elisabetta Trezzi},
+  title = {Shades of Gray and Colour Constancy},
+  journal = {Color and Imaging Conference},
+  volume = {12},
+  number = {1},
+  pages = {37--37},
+  doi = {10.2352/CIC.2004.12.1.art00008},
+  url = {https://library.imaging.org/cic/articles/12/1/art00008},
+  year = {2004}
+}
+
 %? ------------------------ unused ------------------------
 
 @article{MC_stacking,
