--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -105,6 +105,7 @@
   frame = tb,
   identifierstyle=\color{black},
   backgroundcolor=\color{white},
+  escapechar = @
 }
 \lstset{style=mystyle}
 
