--- a/src/references.bib
+++ b/src/references.bib
@@ -341,6 +341,26 @@ keywords = {scene analysis, model fitting, location determination, image matchin
   year = {2004}
 }
 
+@article{ssim,
+  title={Image quality assessment: from error visibility to structural similarity},
+  author={Wang, Zhou and Bovik, Alan C and Sheikh, Hamid R and Simoncelli, Eero P},
+  journal={IEEE Transactions on Image Processing},
+  volume={13},
+  number={4},
+  pages={600--612},
+  year={2004},
+  publisher={IEEE}
+}
+
+@inproceedings{snr,
+  title={Histograms of Oriented Gradients for Human Detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2005},
+  pages={886--893}
+}
+
+
 %? ------------------------ unused ------------------------
 
 @article{MC_stacking,
