Started writingchapter 4 and conclusions

--- a/src/references.bib
+++ b/src/references.bib
@@ -360,118 +360,34 @@ keywords = {scene analysis, model fitting, location determination, image matchin
   pages={886--893}
 }
 
-
-%? ------------------------ unused ------------------------
-
-@article{MC_stacking,
-  title={MegaPipe: The MegaCam image stacking pipeline at the Canadian astronomical data centre},
-  author={Gwyn, Stephen DJ},
-  journal={Publications of the Astronomical Society of the Pacific},
-  volume={120},
-  number={864},
-  pages={212},
-  year={2008},
-  publisher={IOP Publishing}
+@article{niqe,
+  title={Making a {\textquoteright}completely blind{\textquoteright} image quality analyzer},
+  author={Mittal, Anish and Soundararajan, Ramana and Bovik, Alan C},
+  journal={IEEE Transactions on Image Processing},
+  volume={21},
+  number={11},
+  pages={4695--4708},
+  year={2012},
+  publisher={IEEE}
 }
 
-@article{sloan,
-  title={The sloan digital sky survey: Technical summary},
-  author={York, Donald G and Adelman, J and Anderson Jr, John E and Anderson, Scott F and Annis, James and Bahcall, Neta A and Bakken, JA and Barkhouser, Robert and Bastian, Steven and Berman, Eileen and others},
-  journal={The Astronomical Journal},
-  volume={120},
-  number={3},
-  pages={1579},
-  year={2000},
-  publisher={IOP Publishing}
+@inproceedings{brisque,
+  title={BRISQUE: Blind/Referenceless Image Spatial Quality Evaluator},
+  author={Mittal, Anish and Soundararajan, Ramana and Bovik, Alan C},
+  booktitle={Proceedings of the IEEE International Conference on Image Processing (ICIP)},
+  pages={2349--2353},
+  year={2012},
+  organization={IEEE},
+  doi={10.1109/ICIP.2012.6389685}
 }
 
-@article{astroph_hist_3,
-    author = {Klaus Brasch},
-    title = {A Short History of Astrophotography (Part 1)},
-    journal = {Journal of the Royal Astronomical Society of Canada},
-    volume = {111},
-    number = {2},
-    pages = {52},
-    year = {2017},
-    month = {April},
-    bibcode = {2017JRASC.111...52B}
-}
-
-@article{astroph_hist_4,
-    author = {Klaus Brasch},
-    title = {A Short History of Astrophotography (Part 1)},
-    journal = {Journal of the Royal Astronomical Society of Canada},
-    volume = {111},
-    number = {2},
-    pages = {52},
-    year = {2017},
-    month = {April},
-    bibcode = {2017JRASC.111...52B}
-}
-
-@inproceedings{image_enhancement,
-author = {Chenyao Qu and Yanhao Tangge and Guang Yang},
-title = {{Digital signal processing techniques for image enhancement and restoration}},
-volume = {12799},
-booktitle = {Third International Conference on Advanced Algorithms and Signal Image Processing (AASIP 2023)},
-editor = {Kannimuthu Subramaniam and Pavel Loskot},
-organization = {International Society for Optics and Photonics},
-publisher = {SPIE},
-pages = {127992R},
-keywords = {Digital signal processing, Image enhancement, Image restoration},
-year = {2023},
-doi = {10.1117/12.3005862},
-URL = {https://doi.org/10.1117/12.3005862}
-}
-
-@inbook{astrophotography,
-  title = {Astrophotography},
-  ISBN = {9783031653469},
-  ISSN = {2197-6562},
-  url = {http://dx.doi.org/10.1007/978-3-031-65346-9_2},
-  DOI = {10.1007/978-3-031-65346-9_2},
-  booktitle = {Exploring the Universe},
-  publisher = {Springer Nature Switzerland},
-  author = {Dire,  James},
-  year = {2024},
-  pages = {23–47}
-}
-
-@article{image_enhancement_technique,
-  title = {Analysis and Comparison of Image Enhancement Technique for Improving PSNR of Lung Images by Unsharp Mask Filtering Technique over Histogram Equalization Technique},
-  url = {http://dx.doi.org/10.18137/cardiometry.2022.25.825831},
-  DOI = {10.18137/cardiometry.2022.25.825831},
-  number = {25},
-  journal = {CARDIOMETRY},
-  publisher = {RosNOU},
-  author = {Sabarish,  R.T. and Ramadevi,  R.},
-  year = {2023},
-  month = feb,
-  pages = {825–831}
-}
-
-@misc{image_processing_handbook,
-  title = {The Image Processing Handbook},
-  ISBN = {9780429118333},
-  url = {http://dx.doi.org/10.1201/9781420040760},
-  DOI = {10.1201/9781420040760},
-  publisher = {CRC Press},
-  author = {Russ,  John C. and Russ,  John C.},
-  year = {2002},
-  month = jul 
-}
-
-@article{astrophotography_issue,
-  title = {Astrophotography issue},
-  volume = {22},
-  ISSN = {2058-7058},
-  url = {http://dx.doi.org/10.1088/2058-7058/22/10/30},
-  DOI = {10.1088/2058-7058/22/10/30},
-  number = {10},
-  journal = {Physics World},
-  publisher = {IOP Publishing},
-  author = {Fedida,  Simon},
-  year = {2009},
-  month = oct,
-  pages = {16–17}
+@inproceedings{liqe,
+  title={LIQE: Learning-based Image Quality Evaluator},
+  author={Mittal, Anish and Soundararajan, Ramana and Bovik, Alan C},
+  booktitle={Proceedings of the IEEE International Conference on Image Processing (ICIP)},
+  pages={1--5},
+  year={2016},
+  organization={IEEE},
+  doi={10.1109/ICIP.2016.7533302},
+  url={https://doi.org/10.1109/ICIP.2016.7533302}
 }
