Started analysis secrtion

--- a/src/references.bib
+++ b/src/references.bib
@@ -352,13 +352,19 @@ keywords = {scene analysis, model fitting, location determination, image matchin
   publisher={IEEE}
 }
 
-@inproceedings{snr,
-  title={Histograms of Oriented Gradients for Human Detection},
-  author={Dalal, Navneet and Triggs, Bill},
-  booktitle={IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year={2005},
-  pages={886--893}
+@inbook{snr,
+  publisher = {John Wiley & Sons, Ltd},
+  isbn = {9780470097434},
+  title = {Appendix 3: Image Error Measures},
+  booktitle = {Digital Image Processing},
+  chapter = {},
+  pages = {759-760},
+  doi = {https://doi.org/10.1002/9780470097434.app3},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9780470097434.app3},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470097434.app3},
+  year = {2007}
 }
+
 
 @article{niqe,
   title={Making a {\textquoteright}completely blind{\textquoteright} image quality analyzer},
