Added abstract and analysis

--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -13,6 +13,7 @@
 \documentclass[noexaminfo, oneside]{sapthesis} % binding=0.6cm, 
 
 % Packages
+\usepackage{tikz}
 \usepackage{multicol}
 \usepackage{microtype}
 \usepackage[italian, provide=*]{babel}
