--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -213,7 +213,7 @@
 
 % ================== ACKNOWLEDGMENTS ==================
 
-\input{./chapter/ack}
+%\input{./chapter/ack}
 
 \backmatter
 \phantomsection
