--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -115,7 +115,7 @@
 
 % Metadata
 \definecolor{sapienzared}{HTML}{000000}
-\hypersetup{pdftitle={Thesis},pdfauthor={Andrea Spinelli}, urlcolor=sapienzared, linkcolor=sapienzared, colorlinks=true, citecolor=sapienzared}
+\hypersetup{pdftitle={Thesis},pdfauthor={Andrea Spinelli}, urlcolor=darkgray, linkcolor=darkgray, colorlinks=true, citecolor=darkgray}
 \title{Allineamento, Denoising e Stacking di immagini $\\$lunari mediante tecniche tradizionali e Unsharp $\\$Masking basato su Deep Learning}
 \author{Andrea Spinelli}
 \IDnumber{1985877}
@@ -213,7 +213,7 @@
 
 % ================== ACKNOWLEDGMENTS ==================
 
-%\input{./chapter/ack}
+\input{./chapter/ack}
 
 \backmatter
 \phantomsection
